--- a/agri-zera/contact.html
+++ b/agri-zera/contact.html
@@ -87,7 +87,7 @@
 		<div class="container">
 			<!-- Page Heading/Breadcrumbs -->
 			<h1 class="mt-4 mb-3">Contact
-				<small>Subheading</small>
+				<small>Feel Free to ask doubts</small>
 			</h1>
 		</div>
 	</div>
