--- a/agri-zera/blog-home-2.html
+++ b/agri-zera/blog-home-2.html
@@ -75,6 +75,9 @@
 				 </div>
 			  </li>-->
 			  <li class="nav-item">
+				<a class="nav-link" href="blog-home-2.html">Warehouse</a>
+			  </li>
+			  <li class="nav-item">
 				 <a class="nav-link" href="contact.html">Contact</a>
 			  </li>
 		   </ul>
