--- a/agri-zera/about.html
+++ b/agri-zera/about.html
@@ -74,6 +74,9 @@
                         
                      </div>
                   </li>-->
+				  <li class="nav-item">
+					<a class="nav-link" href="blog-home-2.html">Warehouse</a>
+				  </li>
                   <li class="nav-item">
                      <a class="nav-link" href="contact.html">Contact</a>
                   </li>
