--- a/agri-zera/services.html
+++ b/agri-zera/services.html
@@ -76,7 +76,7 @@
                      </div>
                   </li>-->
 				  <li class="nav-item">
-					<a class="nav-link" href="blog-home-2.html">Warehouse</a>
+					<a class="nav-link" href="https://chaitanya1-coder.github.io/warehouse/MotherDiary/MotherDiary.html">Warehouse</a>
 				  </li>
                   <li class="nav-item">
                      <a class="nav-link" href="contact.html">Contact</a>
